--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["zignd.html-css-class-completion"]
+  "recommendations": [
+    "zignd.html-css-class-completion",
+    "formulahendry.auto-close-tag"
+  ]
 }
